[package]
name = "wavelink_backup_tool"
version = "0.3.0"
description = "Wave Link backup/import/export utility"
authors = ["prgmitchell"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wavelink_backup_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
walkdir = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
tempfile = "3.14"
futures-util = "0.3"
tokio-tungstenite = "0.21"
url = "2.5"
tokio = { version = "1", features = ["time", "net"] }
os_info = "3.9"
